--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                 <h3><a href="example-project/index.html">Пригодницька гра на GDevelop</a></h3>
                 <p>Цей проєкт демонструє можливості платформи GDevelop для створення 2D-ігор. У грі гравець керує персонажем, який досліджує світ, збирає предмети та уникає перешкод.</p>
             </li>
+            <li>
+                <h3><a href="GAME1/index.html">Пригодницька гра на GDevelop</a></h3>
+                <p>Цей проєкт демонструє можливості платформи GDevelop для створення 2D-ігор. У грі гравець керує персонажем, який досліджує світ, збирає предмети та уникає перешкод.</p>
+            </li>
         </ul>
     </section>
 
