--- a/example-project/game/index.html
+++ b/example-project/game/index.html
@@ -72,6 +72,10 @@
 	<script src="events-tools/windowtools.js" crossorigin="anonymous"></script>
 	<script src="events-tools/networktools.js" crossorigin="anonymous"></script>
 	<script src="splash/gd-logo-light.js" crossorigin="anonymous"></script>
+	<script src="pixi-renderers/three.js" crossorigin="anonymous"></script>
+	<script src="pixi-renderers/ThreeAddons.js" crossorigin="anonymous"></script>
+	<script src="pixi-renderers/draco/gltf/draco_decoder.wasm" crossorigin="anonymous"></script>
+	<script src="pixi-renderers/draco/gltf/draco_wasm_wrapper.js" crossorigin="anonymous"></script>
 	<script src="pixi-renderers/pixi.js" crossorigin="anonymous"></script>
 	<script src="pixi-renderers/pixi-filters-tools.js" crossorigin="anonymous"></script>
 	<script src="pixi-renderers/runtimegame-pixi-renderer.js" crossorigin="anonymous"></script>
@@ -88,6 +92,15 @@
 	<script src="howler-sound-manager/howler-sound-manager.js" crossorigin="anonymous"></script>
 	<script src="fontfaceobserver-font-manager/fontfaceobserver.js" crossorigin="anonymous"></script>
 	<script src="fontfaceobserver-font-manager/fontfaceobserver-font-manager.js" crossorigin="anonymous"></script>
+	<script src="Extensions/3D/A_RuntimeObject3D.js" crossorigin="anonymous"></script>
+	<script src="Extensions/3D/A_RuntimeObject3DRenderer.js" crossorigin="anonymous"></script>
+	<script src="Extensions/3D/CustomRuntimeObject3D.js" crossorigin="anonymous"></script>
+	<script src="Extensions/3D/CustomRuntimeObject3DRenderer.js" crossorigin="anonymous"></script>
+	<script src="Extensions/3D/Base3DBehavior.js" crossorigin="anonymous"></script>
+	<script src="Extensions/3D/Model3DRuntimeObject.js" crossorigin="anonymous"></script>
+	<script src="Extensions/3D/Model3DRuntimeObject3DRenderer.js" crossorigin="anonymous"></script>
+	<script src="Extensions/TextObject/textruntimeobject-pixi-renderer.js" crossorigin="anonymous"></script>
+	<script src="Extensions/TextObject/textruntimeobject.js" crossorigin="anonymous"></script>
 	<script src="Extensions/TiledSpriteObject/tiledspriteruntimeobject-pixi-renderer.js" crossorigin="anonymous"></script>
 	<script src="Extensions/TiledSpriteObject/tiledspriteruntimeobject.js" crossorigin="anonymous"></script>
 	<script src="object-capabilities/AnimatableBehavior.js" crossorigin="anonymous"></script>
@@ -96,8 +109,11 @@
 	<script src="object-capabilities/OpacityBehavior.js" crossorigin="anonymous"></script>
 	<script src="object-capabilities/ResizableBehavior.js" crossorigin="anonymous"></script>
 	<script src="object-capabilities/ScalableBehavior.js" crossorigin="anonymous"></script>
+	<script src="object-capabilities/TextContainerBehavior.js" crossorigin="anonymous"></script>
 	<script src="Extensions/3D/HemisphereLight.js" crossorigin="anonymous"></script>
 	<script src="code0.js" crossorigin="anonymous"></script>
+	<script src="code1.js" crossorigin="anonymous"></script>
+	<script src="code2.js" crossorigin="anonymous"></script>
 	<script src="data.js" crossorigin="anonymous"></script>
 
 
