--- a/example-project/index.html
+++ b/example-project/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Гра на GDevelop</title>
+    <title>Гра на GDevelop123</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
