--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Особисті проєкти Тараса Шевченка1</title>
+    <title>Особисті проєкти Тараса Шевченка</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Ласкаво прошу до моїх особистих проєктів11</h1>
+        <h1>Ласкаво прошу до моїх особистих проєктів</h1>
+        <p>Тут ви знайдете не тільки проєкти, але й трохи гумору!</p>
     </header>
 
     <section id="about">
         <h2>Про мене</h2>
-        <p>Мене звати 123. Я - учень курсу інформатики, який:</p>
+        <p>Мене звати Тарас. Я - учень курсу інформатики, який:</p>
         <ul>
             <li>Вивчає основи розробки ігор</li>
             <li>Практикується у створенні інтерактивних проєктів</li>
             <li>Опановує сучасні технології та інструменти для розробки 2D-ігор</li>
         </ul>
+        <p>І ось вам жарт: Чому програмісти не люблять природу? Бо там занадто багато багів!</p>
     </section>
 
     <section id="projects">
@@ -27,16 +29,24 @@
             <li>
                 <h3><a href="example-project/index.html">Пригодницька гра на GDevelop</a></h3>
                 <p>Цей проєкт демонструє можливості платформи GDevelop для створення 2D-ігор. У грі гравець керує персонажем, який досліджує світ, збирає предмети та уникає перешкод.</p>
+                <p>Жарт: Чому комп'ютер завжди холодний? Бо він залишає свої вікна відкритими!</p>
             </li>
             <li>
                 <h3><a href="GAME1/index.html">Пригодницька гра на GDevelop</a></h3>
                 <p>Цей проєкт демонструє можливості платформи GDevelop для створення 2D-ігор. У грі гравець керує персонажем, який досліджує світ, збирає предмети та уникає перешкод.</p>
+                <p>Жарт: Як називається програміст, який працює вночі? Нічний кодер!</p>
+            </li>
+            <li>
+                <h3><a href="GAME2/index.html">Головоломка 3000</a></h3>
+                <p>Цей проєкт показує можливості платформи GDevelop для створення головоломок. Гравець повинен розв'язати ряд головоломок, щоб пройти гру.</p>
+                <p>Жарт: Чому програмісти люблять темну тему? Бо світла тема має занадто багато багів!</p>
             </li>
         </ul>
     </section>
 
     <footer>
         <p>&copy; 2024 Тарас Шевченко. Усі права захищені.</p>
+        <p>Жарт: Чому програмісти не можуть займатися спортом? Бо вони бояться помилок!</p>
     </footer>
 </body>
-</html> 
+</html>
